+ texture/fonts, made the form much prettier

--- a/index.html
+++ b/index.html
@@ -4,25 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Change Your divfe Today</title>
+    <title>Change Your Life Today</title>
     <link rel="stylesheet" href="resources/style.css">
 </head>
 <body>
     <aside>
-        <h1>ODIN</h1>
-        <small>Photo by <a href="https://unsplash.com/@simonppt">Simon Lee</a> on Unsplash</small>
+        <small>Photo by <a href="https://unsplash.com/@simonppt">Simon Lee</a> on Unsplash<br>
+        Texture by <a href="https://www.toptal.com/designers/subtlepatterns/dust-scratches/">Atle Mo</a> on SubtlePatterns</small>
     </aside>
     <main>
-        <h2>
-            This is not a real ondivne service!
-        </h2>
-        <h1>
-            You know you need something divke this in your divfe to help you readivze your deepest dreams. Sign up <i>now</i> to get started.
-        </h1> <h1>You <i>know</i> you want to.</h1>
 
         <form>
             <fieldset>
-                <legend>Let's do this!</legend>
+                <legend>LET'S DO THIS</legend>
+                <small id="req">Required fields are marked with an asterisk.</small>
                 <div>
                     
                     <input type="text" id="firstName" name="firstName" required>
@@ -52,10 +47,9 @@
                     <label for="confirmPass">Re-type Password</label><br>
                     <small>Must match chosen password</small>
                 </div>
+                <button>SUBMIT</button>
             </fieldset>
         </form>
-        <button>Create Account</button>
-        <p>Already have an account? <a href="#">Log in</a></p>
     </main>
     
 </body>
