--- a/index.html
+++ b/index.html
@@ -9,11 +9,17 @@
 </head>
 <body>
     <aside>
+        <h1>ODIN</h1>
         <small>Photo by <a href="https://unsplash.com/@simonppt">Simon Lee</a> on Unsplash<br>
         Texture by <a href="https://www.toptal.com/designers/subtlepatterns/dust-scratches/">Atle Mo</a> on SubtlePatterns</small>
     </aside>
     <main>
-
+        <div>
+            <h2>THIS IS NOT A REAL ONLINE SERVICE!</h2>
+            <h1>YOU KNOW YOU NEED SOMETHING LIKE THIS IN YOUR LIFE TO HELP YOU REALIZE YOUR DEEPEST DREAMS.</h1>
+            <p>Sign up now to get started. You <i>know</i> you want to.<br>
+            Already have an account? <a href="#">Log in.</a></p>
+        </div>
         <form>
             <fieldset>
                 <legend>LET'S DO THIS</legend>
